--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-calendar": "^3.9.0",
+    "react-cookie": "^4.1.1",
     "react-date-picker": "^9.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
