--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "google-map-react": "^2.2.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
