--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "emailjs-com": "^3.2.0",
     "google-map-react": "^2.2.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
